--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,16 @@ matplotlib==3.10.1
 langfuse==2.59.7
 networkx==3.4.2
 duckduckgo_search==7.5.4
+
+# 추가된 의존성 (척추 유합술 상담 시스템용)
+PyPDF2==3.0.1
+pdfplumber==0.11.4
+sqlalchemy==2.0.36
+sqlite3  # Python 내장 모듈
+pydantic==2.10.4
+asyncio  # Python 내장 모듈
+logging  # Python 내장 모듈
+
+# 선택적 의존성 (성능 향상용)
+chromadb==0.5.23
+sentence-transformers==3.3.1
